--- a/card.html
+++ b/card.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class="set-btn-position">
                             <button type="button" class="card-btn btn-minus"></button>
-                            <input type="number" class="card-input" readonly>
+                            <input type="number" class="card-input" value="0" readonly>
                             <button type="button" class="card-btn btn-plus"></button>
                         </div>
                         <div class="position-button-card">
