--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <h2 class="main-caption">Новое поступление</h2>
                 <ul class="card-list list-reset">
                     <li class="card-list-item card-relevant-1">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -300,9 +300,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-2">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -312,9 +317,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-3">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -324,9 +334,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-4">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -336,9 +351,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-5">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -348,9 +368,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-6">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -360,9 +385,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-7">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -372,9 +402,14 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                     <li class="card-list-item card-relevant-8">
-                        <div class="flag-new-product">
+                        <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
@@ -384,6 +419,11 @@
                             <s class="card-price-decider">2 800 ₽</s>
                             <span class="card-price-relevant">2 800 ₽</span>
                         </article>
+                        <div class="card-list-hover">
+                            <button type="button" class="faworite-button"></button>
+                            <button type="button" class="add-button"></button>
+                            <button type="button" class="fast-buy-btn">Быстрый заказ</button>
+                        </div>
                     </li>
                 </ul>
                 <div class="go-catalog-position">
